# tango-cookbook

./: .env.example  .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: notebooks.yml
examples/: README.md
examples/incumbent-on-post/: README.md  brief.py  evals.py  sample_notice.json  scorer.py
examples/opportunities-agent/: README.md  agent.py  local_agent.py
examples/saved-search-watcher/: .gitignore  README.md  profiles.example.yaml  watcher.py
examples/tango-lookup-extension/: README.md  background.js  manifest.json  options.html  options.js  popup.html  popup.js
examples/webhook-receiver/: .gitignore  README.md  register.py  server.py
notebooks/: README.md  budget-contractability-score.ipynb  budget-deep-space-exploration.ipynb  incumbent-radar.ipynb  naics-to-agency-map.ipynb  protest-landmines.ipynb  replacing-usaspending-with-tango.ipynb
scripts/: check_frontmatter.py
