[project]
name = "tango-cookbook"
version = "0.1.0"
description = "Public recipes for working with the Tango API, primarily via the tango-python SDK."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "tango-python>=1.1.2",
    "jupyterlab>=4.2",
]

[dependency-groups]
dev = [
    "nbstripout>=0.7",
    "nbclient>=0.10",
    "pyyaml>=6.0",
]
