[project]
name = "tango-cookbook"
version = "0.1.0"
description = "Public recipes for working with the Tango API, primarily via the tango-python SDK."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "tango-python[webhooks]>=1.1.3",
    "jupyterlab>=4.2",
]

[dependency-groups]
dev = [
    "nbclient>=0.10",
    "nbdime>=4.0",
    "pyyaml>=6.0",
]
examples = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]
